# sandbox

./: .gitmodules  .jd  setup.bash
controls/: .dockerfile  .jd  CMakeLists.txt  readme.md
controls/include/jcontrols/: cost_function.h  dynamics.h
controls/include/jcontrols/cost_functions/: quadratic.h
controls/include/jcontrols/ilqr/: discrete_solver.h  problem.h  solver.h
controls/include/jcontrols/models/: bicycle_model.h  bicycle_model2.h  bicycle_model3.h  discretized_dynamics.h  dynamic_bicycle_model.h  finite_difference.h  kinematic_bicycle_model.h  pendulum.h
controls/include/jmath/: time_range.h  utils.h
controls/include/jmath/integration/: euler.h  identity.h  integrate.h  rk4_classic.h
controls/include/jtraj/: plotting.h  ros.h  trajectory.h  velocity_profile.h
controls/include/jtraj/generators/: circle.h
controls/src/: main.cpp  main_old.cpp  pendulum_testing.cpp  test.cpp
controls/src/jcontrols/models/: bicycle_model.cpp  bicycle_model.py  bicycle_model2.cpp  bicycle_model3.cpp  dynamic_bicycle_model.cpp  dynamic_bicycle_model.py  kinematic_bicycle_model.cpp  pendulum.cpp  pendulum.py
controls/src/jmath/: time_range.cpp
controls/tests/: CMakeLists.txt  cost_function_test.cpp  dynamics_test.cpp  minimal_tracking_test.cpp
fluidmesh/: viz.Dockerfile
gtsam/: .jd  CMakeLists.txt  Dockerfile  build.sh  join.sh
gtsam/src/: main.cpp
jd/: LICENSE  pyproject.toml  readme.md  setup.cfg
jd/src/: .jd  jd
jd/src/jd_tools/: argparse.py  build_env.py  build_tool.py  commands.py  config.py  env_files.py  workspace.py
jm/: readme.md  setup.cfg
jm/src/: docker-compose.yml  jm-docker  jm_config
jm/src/jm_tools/: config.py  docker.py
novatel_gps/: .gitignore  .jd  build.sh  docker-compose.yml  join.sh  novatel.Dockerfile
novatel_gps/src/: tester_for_eth.launch.py
