[metadata]
name = jm-tools-jspisak
version = 0.0.1
author = Joshua Spisak
author_email = jspisak@andrew.cmu.edu
description = Robot Deployment Tools
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/joshs333/sandbox.git
project_urls =
    Bug Tracker = https://github.com/joshs333/sandbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src